objects/SalesOrgDetail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A list of sales organization codes and their corresponding company, division, and distribution channel values</description>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <description>Holds Sales Org Code of Sales Org Detail</description>
        <label>Sales Org Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Org Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>Division_Code__c</columns>
        <columns>Company_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>